<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/caloriesBurnedBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CaloriesBurned">

    <LinearLayout
        android:id="@+id/calculations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/caloriesBurnedNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:maxLength="6"
            android:maxLines="1"
            android:text="@string/CaloriesBurnedNumber"
            android:textSize="100sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/entries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:checked="false"
            android:switchMinWidth="100sp"
            android:textColor="@color/colorPrimaryDark"
            android:textOff="@string/CALC"
            android:textOn="@string/METS"
            tools:checked="false"
            tools:textColor="@color/colorPrimaryDark" />

        <FrameLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/caloriesBurnedEditTextBackground"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/AgeHint"
                android:inputType="phone"
                android:labelFor="@+id/editText"
                android:maxLength="2"
                android:padding="8dp"
                android:textColor="@color/fontDarkBackground"
                android:textColorHint="@color/fontDarkBackground" />

            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/Age" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/weightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/caloriesBurnedEditTextBackground"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/WeightHint"
                android:inputType="numberDecimal"
                android:labelFor="@+id/editText"
                android:maxLength="6"
                android:padding="8dp"
                android:textColor="@color/fontDarkBackground"
                android:textColorHint="@color/fontDarkBackground" />

            <TextView
                android:id="@+id/weightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/Weight" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/heartRateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/heartRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/caloriesBurnedEditTextBackground"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/HeartRateHint"
                android:inputType="phone"
                android:labelFor="@+id/editText"
                android:maxLength="3"
                android:padding="8dp"
                android:textColor="@color/fontDarkBackground"
                android:textColorHint="@color/fontDarkBackground" />

            <TextView
                android:id="@+id/heartRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/HeartRate" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/caloriesBurnedEditTextBackground"
                android:ems="10"
                android:gravity="end"
                android:hint="@string/TimeHint"
                android:inputType="number"
                android:labelFor="@+id/editText"
                android:maxLength="7"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/fontDarkBackground"
                android:textColorHint="@color/fontDarkBackground" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/Time" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/METSLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:visibility="gone">

            <Spinner
                android:id="@+id/METs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/caloriesBurnedEditTextBackground"
                android:ems="10"
                android:gravity="end"
                android:maxLength="7"
                android:minHeight="40dp"
                android:padding="8dp"
                android:textAlignment="textEnd"
                android:textColor="@color/fontDarkBackground" />

            <TextView
                android:id="@+id/metsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/METS" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/Calculate" />
    </LinearLayout>

</LinearLayout>