<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainMenuBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <ListView
            android:id="@+id/presetList"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@color/mainMenuSpinnerBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/addPreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mainMenuBackground"
                android:contentDescription="@string/addPreset"
                app:srcCompat="@drawable/ic_new_person" />

            <ImageButton
                android:id="@+id/deletePreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mainMenuBackground"
                android:contentDescription="@string/deletePreset"
                app:srcCompat="@drawable/ic_delete_person" />

            <ImageButton
                android:id="@+id/quickAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mainMenuBackground"
                android:contentDescription="@string/quickEntry"
                app:srcCompat="@drawable/ic_new_entry" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>